--- a/my_admin/package.json
+++ b/my_admin/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.6.2",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
